--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
-    "yarn-install": "^1.0.0"
+    "yarn-install": "^1.0.0" 
+    "axios": ">=0.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
